k8s/manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: dodn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dodn-api
spec:
  selector:
    matchLabels:
      app: dodn-api
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: dodn-api
    spec:
      containers:
        - name: dodn-api
          image: ghcr.io/thezmc/dodn/api:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: dodn-api
spec:
  selector:
    app: dodn-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dodn-web
spec:
  selector:
    matchLabels:
      app: dodn-web
  template:
    metadata:
      labels:
        app: dodn-web
    spec:
      containers:
        - name: dodn-web
          image: ghcr.io/thezmc/dodn/web:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: dodn-web
spec:
  selector:
    app: dodn-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dodn-web-virtualservice
spec:
  hosts:
    # Change this to your own custom host
    - "todo.dev.bigbang.mil"
  gateways:
    # Change this to your gateway
    - istio-system/public
  http:
    - route:
        - destination:
            host: dodn-web
            port:
              number: 80
